# simple_pflow

./: .gitignore  calorimeter.py  dataset.py  generate_fastcalochallenge_data.py  generator.py  pyproject.toml  simple_pflow.yaml  simple_pflow_demo.ipynb  utils.py
calo_flash/: calo_flash.py  calo_flash_demo.ipynb  calorimeter.py
config/: calo_block.yaml  calo_cylinder.yaml  calo_flash_dataset.yaml
notebooks/: dataset_demo.ipynb
src/: dataset.py  generator.py
src/jax_calo_flash/: calo_flash.py  calorimeter.py  dataset.py  generator.py  utils.py
src/torch_calo_flash/: calo_flash.py  calorimeter.py  generator.py
