[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pycaloflash"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "torch",
    "scipy",
    "numpy",
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pycaloflash"]
