[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pycaloflash"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4",
    "torch>=2.0",
    "scipy",
    "numpy",
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["jax_calo_flash"]
